# mba-ia-intro

./: .env.example  README.md  pyproject.toml
1-fundamentos/: 1-hello-world.py  2-init-chat-model.py  3-promp-template.py  4-chat-prompt-template.py  README.md
2-chains-e-processamento/: 1-chains.py  2-chains-decorator.py  3-runnable-lambda.py  4-chains-pipeline.py  5-summarize.py  6-summarize-map-reduce.py  README.md
3-agentes-e-tools/: 1-agent-react-tools.py  README.md
4-gerenciamento-de-memoria/: 1-in-memory-history.py  2-sliding-window-history.py  README.md
5-loaders-e-banco-de-dados-vetoriais/: 1-web-loader.py  2-pdf-loader.py  3-ingestion-pgvector.py  4-search-vector.py  README.md
