[project]
name = "mba-ia-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.8",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
]
